added role enums for role assignments added DTOS and refactor of configs + WebConfig to communicate with backend to frontend