@@ -2,6 +2,7 @@ package com.example.researchproject.application.services;
 
 import com.example.researchproject.application.ports.out.UserRepository;
 import com.example.researchproject.domain.models.User;
+import com.example.researchproject.domain.models.enums.Role;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -10,6 +11,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService implements UserDetailsService {
@@ -27,7 +29,8 @@ public class UserService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
                 user.getPassword(),
-                user.getRoles().stream().map(SimpleGrantedAuthority::new).toList()
+                //remove prefix?
+                user.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.name())).collect(Collectors.toList())
         );
     }
 
@@ -41,12 +44,29 @@ public class UserService implements UserDetailsService {
             throw new IllegalArgumentException("Username already exists: " + username);
         }
 
+        //role assignments
+        // Convert and validate roles
+        List<Role> userRoles = validateAndConvertRoles(roles);
+
         //pw hasher
         String encodedPassword = new BCryptPasswordEncoder().encode(password);
 
 
-        User user = new User(username, encodedPassword, email, roles);
+        User user = new User(username, encodedPassword, email, userRoles);
         return userRepository.save(user);
+    }
+
+    // Helper method to validate and convert roles from String to Role enum
+    private List<Role> validateAndConvertRoles(List<String> roles) {
+        return roles.stream()
+                .map(role -> {
+                    try {
+                        return Role.valueOf(role.toUpperCase());
+                    } catch (IllegalArgumentException e) {
+                        throw new IllegalArgumentException("Invalid role: " + role);
+                    }
+                })
+                .collect(Collectors.toList());
     }
 
 
